# aurorachat-wiiu

./: CMakeLists.txt  README.md  aurorachat-wiiu.elf  aurorachat-wiiu.rpx  aurorachat.elf  aurorachat.rpx
libs/sdl2/include/SDL2/: SDL_config.h  SDL_revision.h
libs/sdl2/lib/cmake/SDL2/: SDL2mainTargets.cmake  SDL2staticTargets.cmake  SDL2testTargets.cmake
libs/sdl2/lib/pkgconfig/: sdl2.pc
source/: main.c  main.cpp
